--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "watch": "tsc --watch & cpx --watch \"./src/**/*.{html,png,jpg,svg}\" ./dist/"
+    "watch": "tsc --watch & cpx --watch \"./src/**/*.{html,png,jpg,svg}\" ./dist/ & http-server --no-cache"
   },
   "devDependencies": {
     "cpx": "^1.5.0",
+    "http-server": "^14.1.1",
     "typescript": "^4.5.5"
   }
 }
